--- a/index.html
+++ b/index.html
@@ -235,6 +235,11 @@
             <!--Courses-->
             <div class="education">
                 <h3 class="title">Курси i тенiнги</h3>
+
+                <h4 class="education_org">BEZPPC</h4>
+                <p class="specialization">PPC-specialist Amazon, курсова робота "Збір семантичного ядра"</p>
+                <p class="period">Липень 2024<span class="line">|</span> Україна</p>
+
                 <h4 class="education_org">IT GID</h4>
                 <p class="specialization">JS, React</p>
                 <p class="period">Серпень 2022 - Квітень 2023 <span class="line">|</span> Україна</p>
@@ -297,6 +302,7 @@
                 <ul class="tech_skils_list">
                     <li class="tech_skils_item"> <span class="tech_skils_text">Google Ads, Ads Editor</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Google Analytcs, Tags Manager</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">Helium 10</span></li> 
                     <li class="tech_skils_item"> <span class="tech_skils_text">Excel, Google Sheets</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Looker Studio (Data Studio)</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">ClickUp (task manager)</span></li>
