--- a/ru.html
+++ b/ru.html
@@ -237,6 +237,10 @@
              <div class="education">
                <h3 class="title">Курсы и теннинги</h3>
 
+               <h4 class="education_org">BEZPPC</h4>
+               <p class="specialization">PPC-специалист Amazon, курсовая работа "Сбор семантического ядра"</p>
+               <p class="period">Июль 2024<span class="line">|</span> Украина</p>
+
                <h4 class="education_org">IT GID</h4>
                <p class="specialization">JavaScript, React</p>
                <p class="period">Август 2022 - Апрель 2023 <span class="line">|</span> Украина</p>
@@ -299,6 +303,7 @@
                 <ul class="tech_skils_list">
                     <li class="tech_skils_item"> <span class="tech_skils_text">Google Ads, Ads Editor</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Google Analytcs, Tags Manager</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">Helium 10</span></li> 
                     <li class="tech_skils_item"> <span class="tech_skils_text">Excel, Google Sheets</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Looker Studio (Data Studio)</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">ClickUp (task manager)</span></li>
