--- a/en.html
+++ b/en.html
@@ -241,6 +241,10 @@
            <div class="education">
                <h3 class="title">Courses and Trainings</h3>
 
+               <h4 class="education_org">BEZPPC</h4>
+               <p class="specialization">Amazon PPC specialist, coursework "Semantic Kernel Gathering"</p>
+               <p class="period">July 2024<span class="line">|</span> Ukraine</p>
+
                <h4 class="education_org">IT GID</h4>
                <p class="specialization">JavaScript, React</p>
                <p class="period">August 2022 - April 2023 <span class="line">|</span> Ukraine</p>
@@ -303,6 +307,7 @@
                 <ul class="tech_skils_list">
                     <li class="tech_skils_item"> <span class="tech_skils_text">Google Ads, Ads Editor</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Google Analytcs, Tags Manager</span></li>
+                    <li class="tech_skils_item"> <span class="tech_skils_text">Helium 10</span></li> 
                     <li class="tech_skils_item"> <span class="tech_skils_text">Excel, Google Sheets</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">Looker Studio (Data Studio)</span></li>
                     <li class="tech_skils_item"> <span class="tech_skils_text">ClickUp (task manager)</span></li>
